# llvm-pure-ir

./: Cargo.toml  README.md
src/codegen/: macros.rs  mod.rs
src/llvm/: aliases.rs  attribute_groups.rs  calling_convention.rs  comdat.rs  dll_storage_classes.rs  fast_math_flags.rs  function_attributes.rs  functions.rs  gc_stratagy_name.rs  global_variables.rs  ifunc.rs  linkage_types.rs  parameter_attributes.rs  prefix.rs  runtime_preemption.rs  thread_local_storage.rs  types.rs  visibility_styles.rs
src/llvm/instructions/: aggregate_operations.rs  binary_operations.rs  bitwise_binary_operations.rs  conversion_operations.rs  memory_access_addressing_operations.rs  other_operations.rs  terminator.rs  unary_operations.rs
src/llvm/type_system/: aggregate.rs  mod.rs  single_value.rs
